[project]
name = "warpslam"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "warp-lang>=1.13.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportAssignmentType = "none"
reportIndexIssue = "none"
reportArgumentType = "none"
reportOperatorIssue = "none"
